--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="menu_gallery">"الصور "</string>
+    <string name="menu_slideshow">عرض الصور</string>
     <string name="order">طلب</string>
     <string name="menu">القائمة</string>
     <string name="MyCart">"سلتي "</string>
@@ -19,8 +21,18 @@
     <string name="Register">تسجيل جديد</string>
     <string name="Alreadyhaveanaccoun">"لدي حساب بالفعل "</string>
     <string name="title_activity_home">"الرئسية "</string>
+    <string name="navigation_drawer_open">"فتح "</string>
+    <string name="navigation_drawer_close">اغلاق</string>
+    <string name="nav_header_title">عنوان</string>
+    <string name="nav_header_subtitle">"عنوان فرعي "</string>
+    <string name="nav_header_desc">وصف</string>
     <string name="action_settings">"الاعدادات "</string>
     <string name="menu_home">"الرئسية "</string>
     <string name="freelyrimshrimp">Free lyrimShrimp</string>
     <string name="categories_1">Categories 1</string>
+    <string name="user_name">user name</string>
+    <string name="password">password</string>
+    <string name="e_mail">E-mail</string>
+    <string name="contactus">Contact US</string>
+    <string name="TermsandConditions">Terms and Conditions</string>
 </resources>
