--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -10,4 +10,5 @@
     <string name="Favorites">Favorites</string>
     <string name="Restaurant">Restaurant</string>
     <string name="MyAccount">My Account</string>
+    <string name="register2">Register !</string>
 </resources>
