improvement items for the screen

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -48,4 +48,5 @@
     <string name="purchase">Purchase</string>
     <string name="more">More</string>
     <string name="you_ll_pay">you\'ll pay</string>
+    <string name="favorites">Favorites</string>
 </resources>
