--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="purchase">Purchase</string>
     <string name="more">More</string>
     <string name="you_ll_pay">you\'ll pay</string>
+    <string name="favorites">Favorites</string>
 </resources>
